# stem-cell-code-auditor

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
src/stem_cell_code_auditor/: config.py  main.py  utils.py
src/stem_cell_code_auditor/agent/: __init__.py  phases.py  state.py  tools.py  workflow.py
src/stem_cell_coding_agent/: config.py  git_tools.py  main.py  run_agent.py  utils.py
src/stem_cell_coding_agent/agent/: __init__.py  phases.py  tools.py  workflow.py
